Enable JWT authentication and role-based access control(Admin/Member)